--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
     "sharp": "^0.25.2",
+    "uuidv4": "^6.2.13",
     "yup": "^0.32.9"
   },
   "devDependencies": {
